tests/zer_fail/dalpha3_disable_int_args.zer
// EXPECTED: compile error
// @cpu_disable_int takes no arguments

i32 main() {
    @cpu_disable_int(42);  // error: takes no arguments
    return 0;
}
